fixing img.project max-wdith error on mobile

--- a/style.css
+++ b/style.css
@@ -1146,7 +1146,7 @@ a.gallery-anchor {
 
 /* IMAGE ADJUSTMENTS */
     img.project {
-      max-width: 100px;
+      max-width: 100%;
       height: auto;
       display: block;
       margin: 0 auto;
